tests/golden/errors/printf-width-huge.rk
fn main() {
    printf("%999999999d\n", 1)
}
